<resources>
    <string name="app_name">GnVoiceAssist</string>
    <string name="err_net_msg">当前网络连接失败,请稍后重试</string>
    <string name="voice_err_msg">识别失败，请稍后再试</string>
    <string name="audio_paused">暂停中&#8230;</string>
    <string name="audio_playing">播放中&#8230;</string>
    <string name="audio_default">等待音乐</string>
    <string name="stop_record">点击说话</string>
    <string name="start_record">录音中&#8230;</string>
    <string name="time_record">耗时:click->StopListen:%1$dms</string>
    <string name="request_error">出错了，请稍后再试</string>
    <string name="no_log">暂时没有日志</string>
    <string name="no_directive">对不起，暂时没有收到指令</string>
    <string name="no_audio">暂时没有歌曲了，请稍后再试</string>
    <string name="open_file_title">选择浏览工具</string>
    <string name="previous_audio">上一首</string>
    <string name="next_audio">下一首</string>
    <string name="open_log">打开日志</string>
    <string name="login">登陆</string>
    <string name="client_id">您应用的client_id</string>
    <string name="client_id_empty">请输入您申请的client_id</string>
    <string name="login_succeed">登陆成功</string>
    <string name="login_failed">登陆失败</string>
    <string name="login_canceled">登陆取消</string>
    <string name="wakeup_succeed">唤醒成功,您问点什么呢?</string>
    <string name="wakeup_word">您可以说【小度小度】进行唤醒</string>
    <string name="audio_permission_error_msg">录音权限失败</string>
    <string-array name="contact_othername">
        <item>电话簿</item>
        <item>电话本</item>
    </string-array>
    <string-array name="message_othername">
        <item>短信</item>
    </string-array>
    <string-array name="dail_othername">
        <item>电话</item>
        <item>拨号盘</item>
    </string-array>
    <string-array name="picture_othername">
        <item>相册</item>
        <item>照片</item>
    </string-array>
    <string-array name="photo_othername">
        <item>图库</item>
        <item>照片</item>
    </string-array>
    <string-array name="email_othername">
        <item>邮箱</item>
        <item>邮件</item>
        <item>EMAIL</item>
    </string-array>
    <string-array name="voicehelper_othername">
        <item>语音</item>
    </string-array>
    <string-array name="calendar_othername">
        <item>日程</item>
    </string-array>
    <string-array name="camera_othername">
        <item>拍照</item>
    </string-array>
    <string-array name="music_othername">
        <item>音乐</item>
        <item>音乐播放器</item>
    </string-array>
    <string-array name="all_othername">
        <item>电话簿</item>
        <item>电话本</item>
        <item>短信</item>
        <item>电话</item>
        <item>拨号盘</item>
        <item>相册</item>
        <item>照片</item>
        <item>邮箱</item>
        <item>EMAIL</item>
        <item>语音</item>
        <item>日程</item>
        <item>拍照</item>
        <item>依赖辐射区</item>
        <item>依赖射区</item>
    </string-array>
    <string-array name="poweroff">
        <item>关机</item>
        <item>官妓</item>
        <item>惯技</item>
        <item>关闭手机</item>
    </string-array>
    <string-array name="phone_type">
        <item>手机</item>
        <item>住宅</item>
        <item>公司</item>
        <item>其他</item>
    </string-array>
    <string name="launcher_name">Voice Assist</string>
    <string name="music_appname">音乐</string>
    <string name="message_appname">信息</string>
    <string name="dail_appname">拨号</string>
    <string name="picture_appname">图库</string>
    <string name="photo_appname">相册</string>
    <string name="email_appname">电子邮件</string>
    <string name="voicehelper_appname">智能语音</string>
    <string name="calendar_appname">日历</string>
    <string name="camera_appname">相机</string>
    <string name="msg_ok">确定</string>
    <string name="msg_cancle">取消</string>
    <string name="install">下载</string>
    <string name="rsp_confuse_promp">请说"打电话"，"发信息"，"读信息"，"闹钟"，"提醒"，"便签"，"天气"，"股票"，"搜索"</string>
    <string name="rsp_ask_who_to_call">打电话给谁？</string>
    <string name="rsp_ask_who_to_call_promp">请说姓名或号码</string>
    <string name="rsp_ask_who_to_sms">发信息给谁？</string>
    <string name="rsp_calling_format">正在呼叫[n1]%1$s</string>
    <string name="rsp_calling_with_call_info">正在呼叫</string>
    <string name="rsp_calling_with_name_number">正在呼叫</string>
    <string name="rsp_no_phone_number_to_sms_format">%1$s没有保存号码</string>
    <string name="rsp_no_phone_number_format">%1$s没有保存号码.</string>
    <string name="rsp_no_contact_with_request">找不到联系人</string>
    <string name="rsp_contact_list_with_firstname_one">找不到联系人，你要找的是%1$s？</string>
    <string name="rsp_contact_list_with_firstname_many">找不到联系人，你要找的是这%1$s位中的一位？</string>
    <string name="rsp_abort_dialing">好的。</string>
    <string name="rsp_sending_using_simcard">正在发送</string>
    <string name="rsp_choose_sim_for_tts_with_num">卡1呼叫还是卡2</string>
    <string name="rsp_choose_sim_for_tts_with_name_num">卡1呼叫还是卡2</string>
    <string name="rsp_choose_sim_for_tts_with_all_info">卡1呼叫还是卡2</string>
    <string name="rsp_calling_using_simcard">正在呼叫</string>
    <string name="rsp_choose_sim_promp">卡1呼叫还是卡2</string>
    <string name="rsp_choose_sim_promp_call">卡1呼叫还是卡2</string>
    <string name="rsp_choose_sim_promp_send">卡1发送还是卡2</string>
    <string name="rsp_contact_detail">%1$s的详情</string>
    <string name="rsp_ask_choose_phone_type_to_call_promp">请说号码前的标签或点击图标</string>
    <string name="rsp_ask_choose_phone_type_to_sms_promp">请说号码前的标签或点击图标</string>
    <string name="rsp_ask_send_sms_confirm">发送还是取消？</string>
    <string name="rsp_ask_send_sms_promp">发送还是取消？</string>
    <string name="rsp_ask_send_sms_again">发送还是取消？</string>
    <string name="rsp_network_error_short">网络有问题。</string>
    <string name="string_stock_name">股票</string>
    <string name="rsp_sms_send_done">正在发送</string>
    <string name="rsp_sms_send_cancel">好的</string>
    <string name="rsp_multiple_same_name_found">以下是联系人的详情：</string>
    <string name="rsp_multiple_name_number_found">选择第几条？</string>
    <string name="rsp_multiple_contact_choose_again">选择第几条？</string>
    <string name="rsp_one_contact_has_multi_number">选择第几条？</string>
    <string name="rsp_contact_alert_no_contact">没有此联系人</string>
    <string name="rsp_web_loading_promp">网络加载中，请稍候</string>
    <string name="label_format">%1$s:%2$s</string>
    <string name="label_with_seq_format">%1$s%2$d:%3$s</string>
    <string name="label_cmd_format">%1$s%2$d</string>
    <string name="phone_label_mobile">手机</string>
    <string name="phone_label_work">公司</string>
    <string name="phone_label_work_fax">单位传真</string>
    <string name="phone_label_home">住宅</string>
    <string name="phone_label_other">其他</string>
    <string name="sms_recipient">收件人:</string>
    <string name="sms_content">发送内容:</string>
    <string name="language_mandarin_code">9</string>
    <string name="language_man_code">4</string>
    <string name="reminder_content">提醒内容:</string>
    <string name="reminder_time">提醒时间:</string>
    <string name="rsp_contact_new" formatted="false">保存还是取消？</string>
    <string name="rsp_ask_input_sms_content_promp">请说发送内容</string>
    <string name="rsp_ask_input_sms_content">请说发送内容</string>
    <string name="rsp_app_open">将为您打开</string>
    <string name="rsp_app_not_found">系统中没有该应用,下载还是取消?</string>
    <string name="rsp_app_already_here">我已经在这里了哟。</string>
    <string name="rsp_app_exit">应用已经安装过了哟</string>
    <string name="rsp_app_search">将为您搜索%1$s，请稍后。</string>
    <string name="sms_send_confirm">发送</string>
    <string name="sms_send_cancel">取消</string>
    <string name="other_web_search">http://www.baidu.com/s?wd=%1$s</string>
    <string name="music_web_search">http://music.baidu.com/s?fr=jinli&amp;key=%1$s</string>
    <string name="separator">，</string>
    <string name="separator_and">和</string>
    <string name="rsp_contact_new_ask_number">请说号码。</string>
    <string name="rsp_contact_new_ask_name">请说姓名。</string>
    <string name="rsp_contact_new_again">保存还是取消。</string>
    <string name="rsp_contact_saved">已保存。</string>
    <string name="rsp_contact_cancel">已取消。</string>
    <string name="rsp_contact_open_app">将为您打开联系人</string>
    <string name="rsp_contact_app_not_found">无法打开联系人</string>
    <string name="rsp_contact_not_found">没有找到%1s</string>
    <string name="rsp_contact_no_number">%1s没有保存号码</string>
    <string name="rsp_contactl_send_contact_tip">想发送号码吗？简单！只要对我说\"把小明的号码发给小红\"就ok啦！</string>
    <string name="navigate">导航</string>
    <string name="gao_name">高德</string>
    <string name="rsp_error_in_sms1">短信内容为空，将打开信息界面。</string>
    <string name="rsp_error_in_sms2">识别出错，将打开信息界面。</string>
    <string name="contact_new_name_title">姓名：%1$s</string>
    <string name="contact_new_number_title">号码：%1$s</string>
    <string name="contact_cmd_confirm">保存</string>
    <string name="contact_cmd_cancel">取消</string>
    <string name="contact_not_save_tip">保存失败，请重试！</string>
    <string name="remind_specify_day_format">%1$d月%2$d日</string>
    <string name="remind_suc_rsp_format">确定还是取消？</string>
    <string name="remind_create_remind_success">创建成功</string>
    <string name="remind_create_remind_fail">创建失败</string>
    <string name="remind_create_remind_cancel">已取消</string>
    <string name="remind_create_remind_out_of_date">时间已经过去了</string>
    <string name="remind_error_cmd"> 确定还是取消？</string>
    <string name="remind_after_year_date_format">%1$d年%2$d月%3$d日</string>
    <string name="music_search_tip1">正在搜索%1$s的歌曲。</string>
    <string name="music_search_tip2">正在搜索歌曲%1$s。</string>
    <string name="music_search_tip3">正在搜索%1$s的%2$s。</string>
    <string name="music_search_tip4">正在挑选精品歌曲。</string>
    <string name="reminder_date_formate">yyyy年MM月dd日 EE HH:mm</string>
    <string name="weather_below_zero">零下</string>
    <string name="unknown_info">亲，这个我真不懂，要不点击搜索看看吧：</string>
    <string name="weather_no_info">这个真没有。您可以试试询问今天和未来三天的天气情况。</string>
    <string name="weather_date_info">%1$s月%2$s日</string>
    <string name="weather_date_diffent_year_info">%1$s年%2$s月%3$s日</string>
    <string name="sim_card_absent">电话卡没有安装</string>
    <string name="msg_voice_control_cancel">将为您结束音控</string>
    <string name="open_app_endwith_app">应用</string>
    <string name="open_app_endwith_software">程序</string>
    <string name="rsp_cancel_noting">没有什么可以取消。</string>
    <string name="restaurant_dianping">大众点评dianping.com</string>
    <string name="contact_appname">联系人</string>
    <string name="have_no_result">没有查询结果</string>
    <string name="input_new_order">请重新输入命令？</string>
    <string name="open_airplan">打开飞行模式</string>
    <string name="close_airplan">关闭飞行模式</string>
    <string name="airplan_mode_opened">飞行模式已打开</string>
    <string name="airplan_mode_closed">飞行模式已关闭</string>
    <string name="getminutes">"%s 分"</string>
    <string name="gethours">"%s 点"</string>
    <string name="rsp_nomatch_error_power">确定还是取消！</string>
    <string name="rsp_no_phone_number_for_call">找不到电话号码</string>
    <string name="rsp_no_phone_number_for_sms">找不到电话号码</string>
    <string name="card">卡</string>
    <string name="is_reboot">确定要重启吗？</string>
    <string name="is_shutdown">确定要关机吗？</string>
    <string name="is_rebooting">正在重启</string>
    <string name="is_shutdownning">正在关机</string>
    <string name="is_cancel_reboot">取消重启</string>
    <string name="is_cancel_shutdown">取消关机</string>
    <string name="shutdown_yes_or_no">确定还是取消</string>
    <string name="reboot_yes_or_no">确定还是取消</string>
    <string name="app_download_cancel">取消下载%1$s</string>
    <string name="app_download_tip_error">识别错误!</string>
    <string name="app_download_remind_error_cmd">下载还是取消？</string>
    <string name="app_is_uninstall">手机中未安装此应用！</string>
    <string name="gaode_app_is_uninstall">手机中暂未安装高德地图！</string>
    <string name="baidu_app_is_uninstall">手机中暂未安装百度地图！</string>
    <string name="voice_navi_to_somewhere">将为您导航到%1$s</string>
    <string name="voice_navi_detail_info">请说出目的地所在的城市名称!!!</string>
    <string name="voice_navi_asked_install_gaodemap">没有安装高德地图,确定要下载吗?</string>
    <string name="voice_navi_asked_install_baidumap">没有安装百度地图,确定要下载吗?</string>
    <string name="voice_navi_asked_install_didi">没有安装滴滴出行,确定要下载吗？</string>
</resources>