<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/root_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/color_f5f5f5"
              android:orientation="vertical">

    <TextView
        android:id="@+id/id_tv_RenderVoiceInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        android:layout_above="@+id/layout_voice"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/wakeup_word"
        android:textColor="@android:color/black"
        android:visibility="gone"
        android:textSize="18dp"/>



    <TextView
        android:layout_above="@id/id_tv_RenderVoiceInputText"
        android:id="@+id/id_tv_time_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="16dp"/>



    <LinearLayout
        android:layout_above="@id/id_tv_time_0"
        android:id="@+id/songLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previousSongBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/previous_audio"/>

        <Button
            android:id="@+id/pauseOrPlayBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/audio_default"/>

        <Button
            android:id="@+id/nextSongBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/next_audio"/>

    </LinearLayout>





    <LinearLayout
        android:id="@+id/layout_voice"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/voiceBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/stop_record"
            android:textColor="@android:color/white"
            android:textSize="16dp"/>

        <Button
            android:id="@+id/openLogBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/open_log"
            android:textColor="@android:color/white"
            android:enabled="false"
            android:textSize="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/songLinearLayout">

        <ScrollView
            android:id="@+id/id_sv_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/topLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                />
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
